--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body{
 
 /* nav */
 
-.container-navbar{
+.container-fluid-navbar{
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -50,13 +50,13 @@ ul li a{
 
 /* Carousel */
 
-.container-carousel{
+.container-fluid-carousel{
   height: 100px;
   background: #99A3A4;
   padding-top: 25px;
 }
 
-.container-carousel a{
+.container-fluid-carousel a{
   color: white;
   font-size: xx-large;
   text-decoration: none;
@@ -64,12 +64,15 @@ ul li a{
 
 /* Main */
 
-.container-card{
-  padding-top: 30px;
-  padding-bottom: 30px;
+.cards{
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
+.card{
+  margin: 3rem;
+}
 
 .cont-img-card{
   display: flex;
@@ -80,8 +83,8 @@ ul li a{
 
 
 .cont-img-card img{
-  width: 250px;
-  height: 160px;
+  width: 18rem;
+  height: 12rem;
   border-radius: 5px;
   box-shadow: -5px -2px 3px 2px #99A3A4;
 }
@@ -165,7 +168,7 @@ td{
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  padding: 100px;
+  padding: 50px;
 }
 
 
@@ -173,6 +176,7 @@ td{
   border: solid 1px black;
   border-radius: 5px;
   padding: 25px;
+  background: #99A3A4;
 }
 
 .card-i{ 
@@ -182,75 +186,83 @@ td{
   justify-content: center;
   border: solid 1px black;
   border-radius: 5px;
-  width: 500px;
+  width: 31rem;
   padding: 50px;
   margin: 20px;
+  background: white;
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+}
+
+.card-i ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-right: 12rem;
 }
 
 .img-card-big{
-  width: 400px;
+  width: 25rem;
   height: auto;
 }
 
-/* tablet */
+@media only screen and (max-width: 1200px){
 
-@media only screen and ( max-width: 820px ){
+  .card-big{
+    flex-direction: column;
+  }
+
+}
 
 
-  #form-categ{
-    justify-content: center;
+@media only screen and (max-width: 700px) {
+  
+  .container-fluid-navbar{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lista{
+    flex-direction: column;
+  }
+
+  .columna{
+    flex-direction: column !important;
+    align-items: center;
   }
 
   .card{
-    margin: 10px;
+    margin-bottom: 20px;
   }
 
-  .cont-img-card img{
-    width: 200px;
-  }
-
-  .f-contact{
-    padding-top: 200px;
-  }
-
-
-  .card-big{
-    flex-direction: column;
-    width: 600px;
-  }
 
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 620px){
 
-  .container-navbar{
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
-  .img-logo{
+  .main{
     display: flex;
     justify-content: center;
+    padding: 30px;
   }
 
-  .container-card{
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-  }
-
-  .card-big{
-    width: 400px;
-  }
-
-  .img-card-big{
-    width: 250px;
+  .container-principal{
+    padding: 0px;
+    width: 25rem;
   }
 
   .card-i{
-    width: 300px;
+    width: 18rem;
+    height: auto;
   }
-}
 
+  .img-card-big{
+    width: 14rem;
+    height: auto;
+  }
+
+}
 
